Fixed z-index of the components.

--- a/src/components/StockModule/StockModule.css
+++ b/src/components/StockModule/StockModule.css
@@ -5,6 +5,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   text-align: center;
+  z-index: 99999999999999;
 }
 
 #stock-module.hide-stock-module {
