--- a/src/containers/StockPortfolio/StockPortfolio.css
+++ b/src/containers/StockPortfolio/StockPortfolio.css
@@ -1,5 +1,8 @@
 #stock-portfolio {
+  position: relative;
   padding: 10px;
+  overflow: auto;
+  z-index: 5;
 }
 
 #stock-portfolio table {
