--- a/src/containers/TopBar/TopBar.css
+++ b/src/containers/TopBar/TopBar.css
@@ -1,3 +1,5 @@
 #top-bar {
+  position: relative;
   padding: 10px;
+  z-index: 10;
 }
